--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output: github_document
 This R package provides tools to visualise Morris water maze date motion-wise!
 
 <br><br>
-
+  
 ## Installation
 ```{r, eval = FALSE}
 # install
@@ -25,5 +25,7 @@ load("data/track_data.RData")
 # check data
 head(track_data)
 ```
+
+<b>Looks good! What can we do with this... Everything!</b>
 
 ## Not necessary
