--- a/README.Rmd
+++ b/README.Rmd
@@ -5,9 +5,9 @@ output: github_document
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 # VisualMWM <img src="man/figures/heatmapGIF_2b-day_1-trial_1.gif" align="right" width="160"/>
-This R package provides tools to visualise Morris water maze data motion-wise!
+This R package provides tools to visualize Morris water maze data motion-wise!
 
-<br><br>
+<br>
   
 ## Installation
 ```{r, eval = FALSE}
