--- a/README.Rmd
+++ b/README.Rmd
@@ -2,15 +2,18 @@
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
+<style>
+body {
+text-align: justify}
+</style>
+
+<!-- README.md is generated from README.Rmd. -->
 
 # VisualMWM <img src="man/figures/heatmapGIF_2b-day_1-trial_1.gif" align="right" width="160"/>
-This R package provides tools to visualize Morris water maze data motion-wise!
+This R package provides tools to visualize Morris water maze tracking data motion-wise! The goal is to start from raw, unprocessed data, i.e. x and y coordinates for every time point, that is obtained with tracking software (e.g. Ethovision). This package comes with an example data set (track_data) that can be used to test the various plotting options. Plots are generated with [ggplot2](https://ggplot2.tidyverse.org/), and animations are rendered with [gganimate](https://gganimate.com/articles/gganimate.html) and [gifski](https://gif.ski/). 
 
-<br>
-  
 ## Installation
-```{r, eval = FALSE}
+```{r, eval = FALSE, include=TRUE}
 # install
 devtools::install_github("Thonnard/VisualMWM")
 # load
@@ -22,11 +25,11 @@ library(VisualMWM)
 # load some data
 load("data/track_data.RData")
 ```
-```{r, eval = TRUE}
+
+```{r, eval = TRUE, include=TRUE}
 # check data
 head(track_data)
 ```
 
-<b>Looks good! What can we do with this... Everything!</b>
 
 ## What else...
