--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,10 @@
 ---
-output: github_document
-css: "custom.css"
+output:
+  github_document:
+  css: "custom.css"
 ---
+
+
 
 
 
@@ -9,6 +12,7 @@ css: "custom.css"
 
 # VisualMWM <img src="man/figures/heatmapGIF_2b-day_1-trial_1.gif" align="right" width="160"/>
 This R package provides tools to visualize Morris water maze tracking data motion-wise! The goal is to start from raw, unprocessed data, i.e. x and y coordinates for every time point, that is obtained with tracking software (e.g. Ethovision). This package comes with an example data set (track_data) that can be used to test the various plotting options. Plots are generated with [ggplot2](https://ggplot2.tidyverse.org/), and animations are rendered with [gganimate](https://gganimate.com/articles/gganimate.html) and [gifski](https://gif.ski/). 
+
 
 ## Installation
 ```{r, eval = FALSE, include=TRUE}
