--- a/README.Rmd
+++ b/README.Rmd
@@ -2,15 +2,15 @@
 output: github_document
 ---
 
-
-
-
-
 <!-- README.md is generated from README.Rmd. -->
 
 # VisualMWM <img src="man/figures/heatmapGIF_2b-day_1-trial_1.gif" align="right" width="160"/>
-This R package provides tools to visualize Morris water maze tracking data motion-wise! The goal is to start from raw, unprocessed data, i.e. x and y coordinates for every time point, that is obtained with tracking software (e.g. Ethovision). This package comes with an example data set (track_data) that can be used to test the various plotting options. Plots are generated with [ggplot2](https://ggplot2.tidyverse.org/), and animations are rendered with [gganimate](https://gganimate.com/articles/gganimate.html) and [gifski](https://gif.ski/). 
+This R package provides functions to visualize [Morris water maze](https://en.wikipedia.org/wiki/Morris_water_navigation_task) tracking data motion-wise! The goal is to visualize behaviour starting from raw, unprocessed data, i.e. x and y coordinates for every time point, that is obtained with tracking software (e.g. Ethovision). This package comes with an example data set (track_data) that can be used to test the various plotting options. Plots are generated with [ggplot2](https://ggplot2.tidyverse.org/), and animations are rendered with [gganimate](https://gganimate.com/articles/gganimate.html) and [gifski](https://gif.ski/). 
 
+## Let's start with an example...
+```{r,  out.width = "10%", include=TRUE, eval=TRUE, echo=FALSE}
+knitr::include_graphics("man/figures/heatmapGIF_2b-day_1-trial_1.gif") 
+```
 
 ## Installation
 ```{r, eval = FALSE, include=TRUE}
@@ -26,10 +26,9 @@ library(VisualMWM)
 load("data/track_data.RData")
 ```
 
-```{r, eval = TRUE, include=TRUE}
+```{r, eval = TRUE}
 # check data
 head(track_data)
 ```
-
 
 ## What else...
