--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,15 @@ head(track_data)
 ```
 
 ## Heatmaps
-There are two main types of heatmaps available: raster and contour. Here we can see an....
+There are two main types of heatmaps available: raster and contour. Here we see an example of a (interpolated) raster heatmap on the left, and a (filled) contour heatmap on the right.
+
+<center>
+```{r,  out.width = "40%", include=TRUE, eval=TRUE, echo=FALSE}
+knitr::include_graphics("man/figures/heatmap_example1.gif") 
+knitr::include_graphics("man/figures/heatmap_example2.gif")
+```
+</center>
+
 
 ## Tracking
 
