update heatmap readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -46,15 +46,25 @@ knitr::include_graphics("man/figures/heatmap_example.gif")
 ```
 
 <br>
-Several other options are available to plot heatmaps. 
+
+### Another example...
+Several other options are available to plot heatmaps. Documentation of all VisualMWM functions can be found [here](https://rdrr.io/github/Thonnard/VisualMWM/man/).
 
 ```{r, eval = FALSE, echo = TRUE}
+heatmapGIF(data=track_data, id="2b", day=1, trial=1, centerx=19.4, centery=-1.4, platformx=50.60, platformy=-33.34,
+           type="contour", contour_filled=FALSE, contour_colour_scaled=TRUE, 
+           heatmap_low = "brown", heatmap_high = "blue",
+           theme_settings = list(axis.text = element_text(face="bold", color="brown", size=16)),
+           loop = TRUE)
+```
 
+```{r,  out.width = "40%", include=TRUE, eval=TRUE, echo=FALSE, fig.align="center"}
+knitr::include_graphics("man/figures/heatmap_example2.gif") 
 ```
 
 
-
 ## Tracking
+Track GIFs display the animals track over time. Several parameters can be adjusted (e.g. quadrant colours, track colour, etc.).
 
 ## Distance to target
 
