--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,8 @@ knitr::include_graphics("man/figures/heatmap_example.gif")
 Several other options are available to plot heatmaps. Documentation of all VisualMWM functions can be found [here](https://rdrr.io/github/Thonnard/VisualMWM/man/).
 
 ```{r, eval = FALSE, echo = TRUE}
-heatmapGIF(data=track_data, id="2b", day=1, trial=1, centerx=19.4, centery=-1.4, platformx=50.60, platformy=-33.34,
+heatmapGIF(data=track_data, id="2b", day=1, trial=1, 
+           centerx=19.4, centery=-1.4, platformx=50.60, platformy=-33.34,
            type="contour", contour_filled=FALSE, contour_colour_scaled=TRUE, 
            heatmap_low = "brown", heatmap_high = "blue",
            theme_settings = list(axis.text = element_text(face="bold", color="brown", size=16)),
