--- a/README.Rmd
+++ b/README.Rmd
@@ -75,7 +75,7 @@ trackGIF(data=track_data, id="2b", day=1, trial=2,
          centerx=19.4, centery=-1.49, platformx=50.60, platformy=-33.34, 
          platform_alpha=1, platform_colour="grey", track_colour="darkblue", track_alpha=0.35, 
          quadrant_colours=c("white", "white", "white", "lightblue"), quadrants_alpha = 0.4,
-         theme_settings =list(axis.text = element_text(face="bold", color="black", size=16)),
+         theme_settings = list(axis.text = element_text(face="bold", color="black", size=16)),
          plot_original_platform = TRUE, original_platform_colour=NA, loop = TRUE)
 ```
 
@@ -120,6 +120,22 @@ velocityGIF(data=track_data, id="1rg", day=1, trial=4, centerx=19.4, centery=-1.
 ```
 
 ## Time spent per quadrant
+Time spent per quadrant can be a good indicator of the learning process. For instance, during probe trials (i.e., trials where the platform is absent), the position of the animal is a good measure of reference memory. 
+
+```{r,  out.width = "40%", include=TRUE, eval=TRUE, echo=FALSE, fig.align="center"}
+knitr::include_graphics("man/figures/bargraph.gif") 
+```
+
+```{r, eval = FALSE, echo = TRUE}
+barGIF(data=track_data, id="2rb", day=1, trial=1, loop = TRUE
+       centerx=19.4, centery=-1.4, platformx=50.60, platformy=-33.34)
+```
+
+VisualMWM also provides functions to display behaviour in static graphs. Next example shows two area plots of time spent per quadrant. Here we can clearly see that during the fourth trial of reversal, compared to the first trial, relatively more time is spent in the target quadrant.
+
+```{r,  out.width = "80%", include=TRUE, eval=TRUE, echo=FALSE, fig.align="center"}
+knitr::include_graphics("man/figures/velocity.gif") 
+```
 
 ## Merge data
 VisualMWM also provides a function to merge raw data files (e.g. of different subjects, trials,...). This function is written based on Ethovision raw data output that contains extra information above the actual tracking data. Here is an example for csv files (examples are provided in tests/csv_merge):
